--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="android:statusBarColor">@color/black</item>
     </style>
 
-    <style name="Theme.FuFuuRecipies" parent="android:ThemeOverlay.Material.Dark" />
+    <style name="Theme.Recipies" parent="android:ThemeOverlay.Material.Dark" />
     <style name="statusBarBackground">@style/grey</style>
 
 </resources>
